# pubMed-paper-fetcher

./: README.md  cancer_papers.csv  error.csv  install-poetry.py  nature_studies.csv  output.csv  pfizer_papers.csv  pharma_papers.csv  pharma_papers_2023.csv  pyproject.toml  science_studies.csv  small_test.csv
pharma_papers/: __init__.py  affiliations.py  cli.py  output.py  parser.py  pubmed.py
tests/: __init__.py  test_affiliations.py
